# rust-rpg

./: Cargo.toml
src/: bank.rs  bank_module.rs  loot_table.rs  loot_table_module.rs  main.rs
