[package]
name = "experiment"
version = "0.1.0"
authors = ["gc <30398469+gc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
rand = "0.8.0"

[profile.release]
opt-level = 3
